test(conformance): add frame conformance tests (Task 3.4)
Comprehensive conformance tests for all 16 frame types per spec §3.3:
- Frame format verification: magic numbers, type IDs, byte sizes
- Roundtrip testing: serialize → parse → equals
- Wire format compliance: little-endian byte order
- XXH64 integrity hashing for Sync-Frame (28 bytes per stream)
- Error code roundtrips (all 14 error codes: 0x01-0x0E)
- FIN flag handling for DataFrame

Exact byte size validation:
- WindowUpdate: 17 bytes (4 magic + 1 type + 4 stream_id + 4 increment + 4 reserved)
- ErrorFrame: 9 bytes (4 magic + 1 type + 1 error_code + 3 reserved)
- KeyUpdate: 16 bytes (4 magic + 1 type + 4 epoch + 1 direction + 6 reserved)
- Sync-Frame: 24 header + 28 per stream (integrity hash at offset 44)
- Sync-Ack: 8 header + 21 per stream

Implementation: 580 lines, 18 conformance tests
All tests pass with exact wire format matching

--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2021"
 publish = false
 
 [dependencies]
+zp-core = { path = "../../crates/zp-core" }
 zp-crypto = { path = "../../crates/zp-crypto" }
 hex = "0.4"
 
 [[test]]
 name = "crypto"
 path = "crypto_test.rs"
+
+[[test]]
+name = "frame"
+path = "frame_conformance.rs"
