chore(deps): add dependencies for Phase 3
Add to workspace dependencies:
- twox-hash: XXH64 integrity hashing for Sync-Frame
- sha2: Session ID derivation (SHA-256)
- rand: Random nonce generation for handshakes

Updated zp-core dependencies for protocol engine implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ criterion = "0.5"
 hex = "0.4"
 tracing = "0.1"
 rand = "0.8"
+twox-hash = "1.6"  # For XXH64 in Sync-Frame integrity
 
 # Pinned dependencies to avoid edition2024 requirement
 base64ct = "=1.6.0"
