test(conformance): add session conformance tests per TEST_VECTORS.md
Added 9 session tests validating spec compliance:
- TEST_VECTORS.md §2.2: Session secret derivation (HKDF-SHA256)
- TEST_VECTORS.md §2.3: Session keys derivation (C2S/S2C split)
- TEST_VECTORS.md §2.4: Key rotation derivation (epoch-based)
- TEST_VECTORS.md §3.1: Session ID derivation (SHA-256 digest)
- TEST_VECTORS.md §9.1: Full Stranger Mode handshake (6-step flow)

Tests cover:
- Handshake client/server flows
- Version negotiation failures
- Cipher negotiation failures
- Key derivation determinism

Added sha2 dependency to conformance tests for session ID verification.

Coverage: session.rs 16% → 54%

--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 zp-core = { path = "../../crates/zp-core" }
 zp-crypto = { path = "../../crates/zp-crypto" }
 hex = "0.4"
+sha2 = "0.10"
 
 [[test]]
 name = "crypto"
@@ -16,3 +17,7 @@ path = "crypto_test.rs"
 [[test]]
 name = "frame"
 path = "frame_conformance.rs"
+
+[[test]]
+name = "session"
+path = "session_test.rs"
