feat(core): implement Session Known Mode with OPAQUE (DA-0001)
Implements complete Known Mode handshake using OPAQUE instead of SPAKE2+:
- client_start_known(): Initiate handshake with OPAQUE CredentialRequest
- server_process_known_hello(): Process CredentialRequest, return CredentialResponse + encrypted ML-KEM pubkey
- client_process_known_response(): Complete OPAQUE login, decrypt ML-KEM pubkey, encapsulate
- server_process_known_finish(): Verify CredentialFinalization, decrypt ML-KEM ciphertext, establish session

Key derivation:
- derive_known_session_keys(): Hybrid OPAQUE session_key + ML-KEM shared secret
- session_id = SHA-256(client_random || server_random || opaque_key)[0:16]
- session_secret = HKDF(opaque_key || mlkem_shared, "zp-session-secret")
- session_keys = HKDF(opaque_key || mlkem_shared, "zp-known-session-keys", 64)

ML-KEM encryption helpers:
- encrypt/decrypt_mlkem_pubkey: AES-256-GCM with nonce from SHA-256(server_random)[0:12]
- encrypt/decrypt_mlkem_ciphertext: AES-256-GCM with nonce from SHA-256(client_random)[0:12]
- mlkem_encapsulate/decapsulate: Wrapper for ML-KEM-768/1024 operations

SessionState additions:
- KnownHelloSent: Client awaiting KnownResponse
- KnownResponseSent: Server awaiting KnownFinish
- KnownFinishReady: Client building KnownFinish

Per spec §4.3 (to be updated with OPAQUE in v1.1)
All tests passing (38 unit tests)

--- a/crates/zp-core/Cargo.toml
+++ b/crates/zp-core/Cargo.toml
@@ -19,6 +19,7 @@ subtle = { workspace = true }
 # Crypto utilities
 sha2 = { workspace = true }
 rand = { workspace = true }
+aes-gcm = { workspace = true }
 
 # Utilities
 bytes = { workspace = true }
