test(conformance): add Known Mode conformance tests (Option A quality gate)
- Added 5 Known Mode conformance tests (all passing):
  1. test_opaque_registration_flow: Validates 4-step OPAQUE registration
  2. test_opaque_login_flow: Validates 4-step OPAQUE login with matching keys
  3. test_known_mode_full_handshake: End-to-end OPAQUE + ML-KEM handshake
  4. test_known_mode_wrong_password_fails: Password mismatch detection
  5. test_known_mode_key_derivation: Hybrid OPAQUE + ML-KEM key derivation

- Fixed encryption key mismatch bug in Known Mode:
  * Server and client now derive encryption key from CredentialRequest + CredentialResponse
  * Previous: server used server_login_state, client used opaque_session_key (mismatch)
  * Updated SessionState::KnownHelloSent to store credential_request for key derivation
  * ML-KEM pubkey/ciphertext encryption now works correctly

- Updated dependencies:
  * tests/conformance/Cargo.toml: Added rand, zeroize dependencies

- Documentation updates:
  * CHANGELOG.md: Added conformance test section with test descriptions
  * NEXT_TASKS.md: Marked conformance tests complete (Option A checklist item 2)

Test coverage: 150 total tests passing (15 session conformance, including 5 new Known Mode tests)
Related: DA-0001 (OPAQUE integration), Task 4.1, Option A quality gate

--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -9,6 +9,8 @@ zp-core = { path = "../../crates/zp-core" }
 zp-crypto = { path = "../../crates/zp-crypto" }
 hex = "0.4"
 sha2 = "0.10"
+rand = "0.8"
+zeroize = "1.8"
 
 [[test]]
 name = "crypto"
