--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ subtle = "2.5"
 
 # Transport
 quinn = "0.11"
+rustls = { version = "0.23", features = ["ring"] }
+rcgen = "0.13"
 tokio = { version = "1.35", features = ["full"] }
 bytes = "1.5"
 
