--- a/crates/zp-transport/Cargo.toml
+++ b/crates/zp-transport/Cargo.toml
@@ -15,6 +15,8 @@ zp-crypto = { path = "../zp-crypto" }
 
 # QUIC transport
 quinn = { workspace = true }
+rustls = { workspace = true }
+rcgen = { workspace = true }
 
 # Async runtime
 tokio = { workspace = true }
