--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -7,6 +7,9 @@ publish = false
 [dependencies]
 zp-core = { path = "../../crates/zp-core" }
 zp-crypto = { path = "../../crates/zp-crypto" }
+zp-transport = { path = "../../crates/zp-transport" }
+tokio = { workspace = true }
+rustls = { workspace = true }
 hex = "0.4"
 sha2 = "0.10"
 rand = "0.8"
@@ -23,3 +26,7 @@ path = "frame_conformance.rs"
 [[test]]
 name = "session"
 path = "session_test.rs"
+
+[[test]]
+name = "quic"
+path = "quic_spec_3_4.rs"
