feat(transport): implement WebSocket transport per spec Appendix D
- WebSocket client/server endpoints with subprotocol negotiation
- Binary frame handling per Appendix D (one zp frame per message)
- Subprotocol identifier 'zp.v1' per spec requirement
- Session integration with Stranger mode (TOFU)
- Support for both TLS and plain TCP connections

Test coverage:
- 3 unit tests (endpoint creation, connection establishment)
- 5 integration tests (bidirectional exchange, session state, lifecycle)
- 6 conformance tests (Appendix D compliance)

Dependencies: tokio-tungstenite 0.21, futures-util 0.3

--- a/crates/zp-transport/Cargo.toml
+++ b/crates/zp-transport/Cargo.toml
@@ -18,6 +18,10 @@ quinn = { workspace = true }
 rustls = { workspace = true }
 rcgen = { workspace = true }
 
+# WebSocket transport
+tokio-tungstenite = { workspace = true }
+futures-util = { workspace = true }
+
 # Async runtime
 tokio = { workspace = true }
 
