--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ quinn = "0.11"
 rustls = { version = "0.23", features = ["ring"] }
 rcgen = "0.13"
 tokio = { version = "1.35", features = ["full"] }
+tokio-tungstenite = "0.21"
+futures-util = "0.3"
 bytes = "1.5"
 
 # Serialization
