--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ rustls = { version = "0.23", features = ["ring"] }
 rcgen = "0.13"
 tokio = { version = "1.35", features = ["full"] }
 tokio-tungstenite = "0.21"
+webrtc = "0.11"
 futures-util = "0.3"
 bytes = "1.5"
 
