--- a/crates/zp-transport/Cargo.toml
+++ b/crates/zp-transport/Cargo.toml
@@ -22,6 +22,9 @@ rcgen = { workspace = true }
 tokio-tungstenite = { workspace = true }
 futures-util = { workspace = true }
 
+# WebRTC transport
+webrtc = { workspace = true }
+
 # Async runtime
 tokio = { workspace = true }
 
@@ -29,6 +32,7 @@ tokio = { workspace = true }
 bytes = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+async-trait = "0.1"
 
 [dev-dependencies]
 proptest = { workspace = true }
