feat(transport): implement TCP fallback transport per spec §3.3.7
TCP transport implementation with StreamChunk framing for legacy fallback:
- StreamChunk format: [stream_id: u32][length: u32][payload: bytes] (LE)
- Multiplexed mode: stream_id = 0xFFFFFFFF (sentinel value)
- Single-stream mode: stream_id = actual ID
- Length-prefixed framing: [4-byte length][frame data]
- DoS protection: MAX_FRAME_SIZE (16 MB) limit
- Session integration with Stranger mode (TOFU)

Components:
- TcpEndpoint: Client/server endpoint creation
- TcpConnection: Frame send/receive with length-prefixed framing
- StreamChunk: Multiplexing format per §3.3.7

Test coverage: 21 tests (4 unit + 5 integration + 12 conformance) all passing
- Unit tests: StreamChunk serialize/parse/roundtrip
- Integration tests: Connection establishment, bidirectional exchange, lifecycle, multiple frames, StreamChunk multiplexing
- Conformance tests: §3.3.7 format compliance, multiplexed mode, session integration

Pending (future work):
- TLS 1.3 wrapper over TCP/443 (currently plain TCP)
- EncryptedRecord wrapper for post-handshake frames
- Racing with QUIC (ZP_RACING_THRESHOLD: 200ms per spec)

--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -40,3 +40,7 @@ path = "websocket_spec_appendix_d.rs"
 [[test]]
 name = "webrtc"
 path = "webrtc_spec_sections_5_and_6_4.rs"
+
+[[test]]
+name = "tcp"
+path = "tcp_spec_3_3_7.rs"
