--- a/crates/zp-core/Cargo.toml
+++ b/crates/zp-core/Cargo.toml
@@ -20,6 +20,7 @@ subtle = { workspace = true }
 sha2 = { workspace = true }
 rand = { workspace = true }
 aes-gcm = { workspace = true }
+chacha20poly1305 = { workspace = true }
 
 # Utilities
 bytes = { workspace = true }
