--- a/crates/zp-transport/Cargo.toml
+++ b/crates/zp-transport/Cargo.toml
@@ -33,9 +33,26 @@ bytes = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 async-trait = "0.1"
+serde = { workspace = true }
+serde_json = "1.0"
+
+# Binary dependencies (webrtc-test-peer)
+reqwest = { version = "0.11", features = ["json"], optional = true }
+tracing-subscriber = { version = "0.3", optional = true }
+
+[[bin]]
+name = "webrtc-test-peer"
+path = "bin/webrtc-test-peer.rs"
+required-features = ["test-peer"]
 
 [dev-dependencies]
 proptest = { workspace = true }
+warp = "0.3"
+uuid = { version = "1.6", features = ["v4", "serde"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde_json = "1.0"
+serde = { workspace = true }
+tracing-subscriber = "0.3"
 
 [features]
 default = ["quic", "tcp"]
@@ -43,3 +60,4 @@ quic = []
 tcp = []
 websocket = []
 webrtc = []
+test-peer = ["webrtc", "reqwest", "tracing-subscriber"]
