test(core): add Session test helpers for nonce/epoch overflow testing
Add test-only accessor methods to Session for testing counter overflow:
- test_set_send_nonce: Set send_nonce to test overflow at u64::MAX
- test_set_recv_nonce: Set recv_nonce to test overflow at u64::MAX
- test_set_key_epoch: Set key_epoch to test overflow at u32::MAX

Methods are gated behind #[cfg(any(test, feature = "test-helpers"))]
and enabled via "test-helpers" feature flag for cross-crate test access.

Includes comprehensive safety documentation warning about catastrophic
nonce reuse if values are set incorrectly.

Spec: §6.5.1 (nonce counter MUST NOT wrap at 2^64-1), §4.6.2 (key_epoch)
Security: crypto-impl agent reviewed and approved (test-only, cfg-gated)

--- a/crates/zp-core/Cargo.toml
+++ b/crates/zp-core/Cargo.toml
@@ -38,3 +38,5 @@ hex = { workspace = true }
 [features]
 default = ["std"]
 std = []
+# Test-only feature: Exposes Session test helpers for overflow testing
+test-helpers = []
