--- a/crates/zp-transport/Cargo.toml
+++ b/crates/zp-transport/Cargo.toml
@@ -49,6 +49,7 @@ required-features = ["test-peer"]
 # Enable test-helpers feature for Session test accessors
 zp-core = { path = "../zp-core", features = ["test-helpers"] }
 proptest = { workspace = true }
+serial_test = "3.0"  # Sequential execution for stress tests to prevent resource contention
 warp = "0.3"
 uuid = { version = "1.6", features = ["v4", "serde"] }
 reqwest = { version = "0.11", features = ["json"] }
