--- a/crates/zp-platform/Cargo.toml
+++ b/crates/zp-platform/Cargo.toml
@@ -10,16 +10,22 @@ description = "Platform-specific integrations for the zp protocol"
 
 [dependencies]
 # Internal dependencies
-zp-core = { path = "../zp-core" }
-zp-crypto = { path = "../zp-crypto" }
-zp-transport = { path = "../zp-transport" }
+# Note: zp-platform intentionally does not depend on zp-core to avoid circular dependencies
+# (zp-core uses KeyProvider trait from zp-platform)
+
+# Cryptography
+aes-gcm = { workspace = true }
+rand = { workspace = true }
+zeroize = { workspace = true }
 
 # Utilities
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
 [target.'cfg(target_os = "ios")'.dependencies]
-# iOS-specific dependencies will go here
+security-framework = "2.11"
+security-framework-sys = "2.11"
+core-foundation = "0.9"
 
 [target.'cfg(target_os = "android")'.dependencies]
 # Android-specific dependencies will go here
