refactor(core): integrate KeyProvider trait for State Token encryption
- Refactor Session::save_state_token() to accept &dyn KeyProvider
- Refactor Session::restore_from_token() to accept &dyn KeyProvider
- Add save_state_token_legacy() for backward compatibility with raw keys
- Add restore_from_token_legacy() for backward compatibility
- Add zp-platform dependency to zp-core and conformance tests
- Update all 27 session conformance tests to use MockKeyProvider
- Internal RawKeyProvider wrapper for legacy method implementations

Spec compliance: §6.5 (State Token), §6.6 (Device-Bound Keys)
Tests: All 249 tests passing, zero clippy warnings

--- a/crates/zp-core/Cargo.toml
+++ b/crates/zp-core/Cargo.toml
@@ -11,6 +11,7 @@ description = "Core protocol engine for the zp transport protocol"
 [dependencies]
 # Internal dependencies
 zp-crypto = { path = "../zp-crypto" }
+zp-platform = { path = "../zp-platform" }
 
 # Security
 zeroize = { workspace = true }
