--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 zp-core = { path = "../../crates/zp-core" }
 zp-crypto = { path = "../../crates/zp-crypto" }
+zp-platform = { path = "../../crates/zp-platform" }
 zp-transport = { path = "../../crates/zp-transport", features = ["websocket", "webrtc"] }
 tokio = { workspace = true }
 rustls = { workspace = true }
