security(platform): implement HKDF key derivation for iOS Secure Enclave
Replace direct X coordinate use with HKDF-SHA256 key derivation per NIST SP 800-56C.
Provides bias mitigation, domain separation, and crypto hygiene for device-bound keys.

Changes:
- Derive AES-256 key using HKDF (ikm: X coordinate, salt: key tag, info: zp-device-key)
- Add comprehensive documentation on HKDF vs direct key trade-offs
- Allow unsafe code only on iOS target for Security.framework FFI
- Fix unused import in network_monitor.rs

Security properties:
- Uniform distribution even if ECC has subtle bias
- Domain separation prevents key reuse across applications
- ~5μs overhead negligible for State Token operations

Per spec §6.6 (Device-Bound Key)

--- a/crates/zp-platform/Cargo.toml
+++ b/crates/zp-platform/Cargo.toml
@@ -15,6 +15,8 @@ description = "Platform-specific integrations for the zp protocol"
 
 # Cryptography
 aes-gcm = { workspace = true }
+hkdf = { workspace = true }
+sha2 = { workspace = true }
 rand = { workspace = true }
 zeroize = { workspace = true }
 
@@ -32,6 +34,9 @@ core-foundation = "0.9"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # WASM/browser dependencies will go here
+
+[dev-dependencies]
+hex = { workspace = true }
 
 [features]
 default = []
